<resources>
    <string name="app_name">RISCC</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="survey">Survey</string>
    <string name="notification">Notification</string>
    <string name="link">Link</string>
    <string name="feedback">Feedback</string>
    <string name="note">Note</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_details_below_to_sign_in">Please enter your details below to sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in1"><u>Sign In</u></string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="forgotPassword1">Forgot Password</string>
    <string name="dontHaveAccount">Don\'t have account?</string>
    <string name="signUp"><u>Sign Up</u></string>
    <string name="signUp1"><u>Sign Up</u></string>
    <string name="loading">loading...</string>
    <string name="pleaseGrantAllRequestedPermission">Please grant all required permissions</string>
    <string name="contactUs">Contact Us</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="dummyPhone">977-98123456789</string>
    <string name="dummyEmail">diary.test@gmail.com</string>
    <string name="editProfile">Edit Profile</string>
    <string name="title">Title</string>
    <string name="contactNumber">Contact Number</string>
    <string name="search">Search</string>

    <string name="dummyDesc">Laboris nisi qui esse dolore eiusmod anim Lorem laboris deserunt est irure irure quis. Laboris nisi qui esse dolore eiusmod anim Lorem laboris deserunt est irure irure quis. Laboris nisi qui esse dolore eiusmod anim Lorem laboris deserunt est irure irure quis.</string>
    <string name="loremIpsum">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum?</string>

    <string name="consent_text_2">This mobile application is part of the study "Psychological support for healthcare professionals and managers in connection with Covid-19". There are different versions of the application that are assigned to different participants. Complete participant information is available to read and download in the app.

I agree to use the application and that information about me is processed in the manner described in "Information to research participants".</string>

    <string name="coln">:</string>
    <string name="ki_se">ki.se</string>
    <string name="phoneHint">+467XXXXXXXX</string>
    <string name="john_doe">John Doe</string>

    <string name="alreadyHaveAccount">Already have an account?</string>

    <string name="create_new_profile">Create new profile</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="termsOfService_underline"><u>Terms of Service</u></string>
    <string name="take_photo">Take photo</string>
    <string name="selectFromGallery">Select from gallery</string>
    <string name="selectPicture">Select picture</string>
    <string name="firstNameEmpty">First name is empty</string>
    <string name="lastnameEmpty">Last name is empty</string>
    <string name="emailEmpty">Email is empty</string>
    <string name="phoneEmpty">Phone is empty</string>
    <string name="invalidPhone">Invalid phone number</string>
    <string name="passwordEmpty">Password is empty</string>
    <string name="confirmPasswordEmpty">Confirm password is empty</string>
    <string name="passwordDoesNotMatch">Password doesn\'t match</string>
    <string name="profileImageIsEmpty">Profile image is empty</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="enterVerificationCode">Enter verification code</string>
    <string name="verify">Verify</string>
    <string name="verification_code_is_sent_in_your_email_and_in_phone_number">Verification code has been sent to your email. Please check your email and update your password.</string>
    <string name="verificationCodeDoesnotMatch">Verification code doesn\'t match</string>
    <string name="submit">Submit</string>
    <string name="topic">Topic</string>
    <string name="submittingFeedback">Posting feedback...</string>
    <string name="description">Description</string>
    <string name="saveNote">Save Note</string>
    <string name="new_note">New note</string>
    <string name="logging_in_msg">Signing up. please wait....</string>
    <string name="email_or_phone_number_with_country_code">Email or phone number with country code</string>
    <string name="verificationCodeForResetPassword">Verification code will be sent at your email or phone number to reset your password.</string>
    <string name="sendVerificationCode">Send Verification Code</string>
    <string name="emailOrPhoneIsEmpty">Email or phone is empty</string>
    <string name="invalidEmailOrPhone">Invalid email or phone number</string>
    <string name="unableToRequestPasswordResetCode">Unable to request reset code</string>
    <string name="verificationCode">Verification Code</string>
    <string name="verificationCodeHasBeenSent">Verification code has been sent to your email.Please check your email and\u0020 </string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="resetPassword">Reset password</string>
    <string name="unableToResetPassword">Unable to reset password</string>
    <string name="resettingPassword">Resetting password...</string>
    <string name="unabletoLoadWebPages">Unable to load web pages</string>
    <string name="links">Links</string>
    <string name="delete_note_msg">Deleting note, please wait...</string>
    <string name="loadingNotes">loading notes...</string>
    <string name="requestVerificationcode">requesting Verification Code</string>
    <string name="oldPassword">Old password</string>
    <string name="unableToChangePassword">Unable to change password, please try again later</string>
    <string name="changingPassword">Change password...</string>
    <string name="oldPasswordEmptyMsg">Old password is empty</string>
    <string name="newPasswordEmptyMsg">New password is empty</string>
    <string name="passwordChangedPleaseLoginAgain">Password changed. Please re-login again!!</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="unableToUpdateProfile">Unable to update profile</string>
    <string name="updatingProfile">updating profile</string>
    <string name="unableToGetData">Unable to get data</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="yourAnswer">Your answer</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="loading_questionnaire">Loading questionnaire...</string>
    <string name="other">Other</string>
    <string name="answer">Answer</string>
    <string name="loadingAnsweredQuestions">Loading answered questions...</string>
    <string name="no_active_questionnaire_group">No active questionnaire group found.</string>
    <string name="finish">Finish</string>
    <string name="editNote">Edit Note</string>
    <string name="noteWillBeDiscarded">Your notes will be discarded, want to exit?</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="noteUpdated">Note updated</string>
    <string name="unableToSyncNote">Unable to sync note.</string>
    <string name="noteWillBeSyncOnInternetRestore">Note will be saved to server after internet connection is restored.</string>
    <string name="buildVersion">Build version</string>
    <string name="logoutWarningMsg">Do you want to logout?</string>
    <string name="no_questions_available_for_now">No questions available for now!</string>
    <string name="no_answer_available">No answer available!</string>
    <string name="verification_code_will_be_sent_at_your_email_to_reset_your_password">Verification code will be sent at your email to reset your password.</string>
    <string name="project_responsible">Project responsible</string>
    <string name="name">Name</string>
    <string name="phone1">Phone</string>
    <string name="unableToLogOut">Unable to logout</string>
    <string name="saving_note_please_wait">Saving note, please wait...</string>
    <string name="signing_up">signing up...</string>
    <string name="verifyingAndSigningUp">Verifying and signing up...</string>
    <string name="signUpSuccessfully">Sign up succeeded</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="storagePermissionNotAllowedWarningmsg">Without this permission this app is unable to upload your photo. Are you sure you want to deny this permission.</string>
    <string name="storageAccessMsgPrompt">You need to allow Storage access in the phone settings</string>
    <string name="iAmSure">I\'M SURE</string>
    <string name="retry">RETRY</string>
    <string name="notNow">NOT NOW</string>
    <string name="settings">SETTINGS</string>
    <string name="loadingQuestionList">Loading questionnaire list</string>
    <string name="galleryPermissionRequired"> Gallery permission required</string>
    <string name="cameraPermissionRequired">Camera permission required</string>
    <string name="success">Success</string>

    <string name="loadingCategories">Loading Categories</string>
    <string name="category">Category</string>
    <string name="editContact">Edit Contact</string>
    <string name="phoneCallPermissionPrompt">You need to allow phone call access in the phone settings</string>
    <string name="phoneCallPermissionWarningPrompt">Without this permission this app is unable to make a phone call. Are you sure you want to deny this permission.</string>
    <string name="thank_you_for_participating_in_this_questionnaire">Thank you for participating in this questionnaire</string>
    <string name="finishingQuestionnaire">Finishing Questionnaire...</string>
    <string name="call">Call</string>
    <string name="unableToFinishQuestionnaire">Unable to finish questionnaire</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="opneLink">Open Link</string>
    <string name="no_internet_connetion_available">No internet connection available</string>
    <string name="remember_password">Remember Password?</string>
    <string name="forgotPassword2">Forgot Password?</string>
    <string name="please_enter_your_registered_email_address_or_phone_number_we_will_get_back_to_you_with_the_reset_password_confirmation_otp">"Please enter your registered email address or phone number, we will get back to
you with the reset password confirmation (One Time Password)"</string>


    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="to_your_account">to your account</string>
    <string name="title_of_the_pdf">Title of the PDF</string>

</resources>