<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_survey"
        android:icon="@drawable/ic_survey"
        android:title="@string/survey" />
    <item
        android:id="@+id/navigation_answer"
        android:icon="@drawable/ic_answer"
        android:title="@string/answer" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/ic_note"
        android:title="@string/note" />
    <item
        android:id="@+id/navigation_links"
        android:icon="@drawable/ic_link"
        android:title="@string/link" />


</menu>