<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactUsDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    android:padding="32dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="5dp"
        android:gravity="center"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/project_responsible"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text=":  "
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/aboutUsNameTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/john_doe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/phone1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text=":  "
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/aboutUsPhoneTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/lato_regular"
                    android:onClick="navigateMenu"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/dummyPhone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text=":  "
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/aboutUsEmailTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/dummyEmail" />
            </LinearLayout>

            <Button
                android:id="@+id/contactUsOkBtn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/circular_corner_view"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/lato_regular"
                android:onClick="navigateMenu"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>

