<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:xmppService=".activity.ResetPassword">

    <RelativeLayout
        android:id="@+id/titleParentLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="15dp"
            android:src="@drawable/backwhite"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgotPassword1"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_20sp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleParentLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="UselessParent">


            <EditText
                android:id="@+id/verificationCodeET"
                android:fontFamily="@font/lato_regular"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_edittext_grey_background"
                android:hint="@string/verificationCode"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                />

            <TextView
                android:id="@+id/coloredTV"
                android:layout_width="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/verificationCodeHasBeenSent"
                />


            <EditText
                android:id="@+id/newPasswordET"
                android:fontFamily="@font/lato_regular"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_corner_edittext_grey_background"
                android:hint="@string/newPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                />

            <EditText
                android:id="@+id/confirmNewPasswordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/lato_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_corner_edittext_grey_background"
                android:hint="@string/confirmNewPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                />


            <Button
                android:onClick="resetPassword"
                android:id="@+id/resetPasswordBtn"
                android:fontFamily="@font/lato_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_edges_button_primary_colored_background"
                android:text="@string/resetPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:textAllCaps="false"
                />


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>