<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:xmppService=".activity.ChangePassword">

    <RelativeLayout
        android:id="@+id/titleParentLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="navigateBack"
            android:contentDescription="@string/app_name"
            android:padding="15dp"
            android:src="@drawable/backwhite"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changePassword"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_20sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/oldPasswordET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_edittext_grey_background"
            android:hint="@string/oldPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_edittext_grey_background"
            android:hint="@string/newPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/confirmNewPasswordET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_edittext_grey_background"
            android:hint="@string/confirmNewPassword"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />


        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="changePassword"
            android:background="@drawable/round_edges_button_primary_colored_background"
            android:text="@string/changePassword"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />


    </LinearLayout>

</RelativeLayout>