<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleParentLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="navigateBack"
            android:padding="15dp"
            android:src="@drawable/backwhite"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_regular"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_20sp" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleParentLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/constantPadding">

            <EditText
                android:id="@+id/titleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_white_background_no_border"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/topic"
                android:imeOptions="actionNext"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/feedbackET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_white_background_no_border"
                android:fontFamily="@font/lato_regular"
                android:gravity="start"
                android:hint="@string/feedback"
                android:imeOptions="actionDone"
                android:lines="10"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/doubleConstantMargin"
                android:layout_marginBottom="19dp"
                android:background="@drawable/round_edges_button_primary_colored_background"
                android:fontFamily="@font/lato_regular"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>